Added our own EU license to app

--- a/app/src/main/assets/atomizeLicense.html
+++ b/app/src/main/assets/atomizeLicense.html
@@ -1,15 +1,46 @@
-© 2016 Team Wrmndfzzy
-© 2016 Joe Maples
-© 2016 Achintya Kattemalavadi
+<html>
+<head>
+    <style>
+        body {
+        font-family: sans-serif;
+        background-color:#212121;
+        }
+        pre {
+        background-color: #424242;
+        color: #ffffff;
+        white-space: pre-wrap;
+        padding: 1em;
+        }
+        h3, ul {
+        color: #ffffff;
+        }
+    </style>
+</head>
+<body>
 
+<h3>
+    GNU General Public License
+    <br/>
+    Version 2, June 1991
+</h3>
+<ul>
+    <li>
+        <b>Atomize</b>
+        <br/>
+        Copyright 2016 Team Wrmndfzzy<br/>
+        Copyright 2016 Achintya Kattemalavadi<br/>
+        Copyright 2016 Joe Maples
+    </li>
+</ul>
+<pre><font color=#dddddd size=3>
 Atomize is released under the GPL Version 2. All copies and derivatives
-of this OpenSource software must retain this license file and the 
+of this OpenSource software must retain this license file and the
 copylefts listed above.
 
                     GNU GENERAL PUBLIC LICENSE
                        Version 2, June 1991
 
- Copyright (C) 1989, 1991 Free Software Foundation, Inc., <http://fsf.org/>
+ Copyright (C) 1989, 1991 Free Software Foundation, Inc., http://fsf.org
  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  Everyone is permitted to copy and distribute verbatim copies
  of this license document, but changing it is not allowed.
@@ -286,3 +317,7 @@ PROGRAMS), EVEN IF SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGES.
 
                      END OF TERMS AND CONDITIONS
+</font></pre>
+
+</body>
+</html>
